// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots FormRow Default 1`] = `
<form>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <div
          className="sc-bwzfXH dWTtjZ"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            What is your name?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-bwzfXH hscxhP"
      >
        <div
          className="sc-bwzfXH dWTtjZ"
        >
          <div
            className="sc-bwzfXH cvRHil"
          >
            <div
              className="sc-eNQAEJ lhLkZ"
              disabled={undefined}
              onBlurCapture={[Function]}
              onClick={[Function]}
              onFocusCapture={[Function]}
            >
              <div
                className="sc-ckVGcZ kdxLRP"
                disabled={undefined}
              >
                <span
                  className="sc-jKJlTe eFYypy"
                >
                  Initials
                </span>
              </div>
              <input
                className="sc-dxgOiQ iSQIum"
                disabled={undefined}
                id={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
          <div
            className="sc-bwzfXH jXfFPt"
          >
            <div
              className="sc-eNQAEJ lhLkZ"
              disabled={undefined}
              onBlurCapture={[Function]}
              onClick={[Function]}
              onFocusCapture={[Function]}
            >
              <div
                className="sc-ckVGcZ kdxLRP"
                disabled={undefined}
              >
                <span
                  className="sc-jKJlTe eFYypy"
                >
                  First name
                </span>
              </div>
              <input
                className="sc-dxgOiQ iSQIum"
                disabled={undefined}
                id={undefined}
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="text"
                value=""
              />
            </div>
          </div>
        </div>
        <div
          className="sc-bwzfXH hMzuwC"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Surname
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <div
          className="sc-bwzfXH dWTtjZ"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            Where do you live?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-bwzfXH hscxhP"
      >
        <div
          className="sc-bwzfXH hMzuwC"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Country
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
        <div
          className="sc-bwzfXH hMzuwC"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                City
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <div
          className="sc-bwzfXH dWTtjZ"
        >
          <p
            className="sc-bxivhb jpexxn"
          >
            Can a boolean only be either true or false?
          </p>
        </div>
        <p
          className="sc-bxivhb jVDCXG"
        >
          Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti non quasi similique sint quae exercitationem molestiae aspernatur cum. Necessitatibus, corrupti veritatis. Placeat, tempora! Vitae rem, nobis rerum natus odit debitis.
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-bwzfXH cEfyDW"
      >
        <div
          className="sc-bwzfXH ezjrvf"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH cFTVqv"
            >
              <div
                checked={true}
                className="sc-kpOJdX kxmcXw"
              >
                <input
                  checked={true}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                True
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH ferkAL"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH cFTVqv"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                False
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH ferkAL"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH cFTVqv"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                Sometimes
              </label>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
</form>
`;

exports[`Storyshots FormRow No Descriptions 1`] = `
<form>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          What is your name?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-bwzfXH hscxhP"
      >
        <div
          className="sc-bwzfXH dRUzLs"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Name
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Where do you live?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-bwzfXH hscxhP"
      >
        <div
          className="sc-bwzfXH dRUzLs"
        >
          <div
            className="sc-eNQAEJ lhLkZ"
            disabled={undefined}
            onBlurCapture={[Function]}
            onClick={[Function]}
            onFocusCapture={[Function]}
          >
            <div
              className="sc-ckVGcZ kdxLRP"
              disabled={undefined}
            >
              <span
                className="sc-jKJlTe eFYypy"
              >
                Country
              </span>
            </div>
            <input
              className="sc-dxgOiQ iSQIum"
              disabled={undefined}
              id={undefined}
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              type="text"
              value=""
            />
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Can a boolean only be true or false?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-bwzfXH cEfyDW"
      >
        <div
          className="sc-bwzfXH ezjrvf"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH cFTVqv"
            >
              <div
                checked={true}
                className="sc-kpOJdX kxmcXw"
              >
                <input
                  checked={true}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="1"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                True
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH ferkAL"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH cFTVqv"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="2"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                False
              </label>
            </p>
          </div>
        </div>
        <div
          className="sc-bwzfXH ferkAL"
        >
          <div
            className="sc-kgoBCf BEYlJ"
            onClick={[Function]}
          >
            <div
              className="sc-bwzfXH cFTVqv"
            >
              <div
                checked={false}
                className="sc-kpOJdX bHCyFz"
              >
                <input
                  checked={false}
                  className="sc-kGXeez sKBUe"
                  id={undefined}
                  name="bool"
                  onBlur={[Function]}
                  onChange={[Function]}
                  onFocus={[Function]}
                  type="radio"
                  value="3"
                />
              </div>
            </div>
            <p
              className="sc-bxivhb jpexxn"
            >
              <label
                htmlFor="bool"
              >
                Sometimes
              </label>
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Do you like toggles?
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-kkGfuU jvfvYf"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH dWTtjZ"
        >
          <div
            className="sc-bwzfXH jLZBZn"
          >
            <div
              checked={false}
              className="sc-kEYyzF brBMbf"
              disabled={undefined}
            >
              <input
                checked={false}
                className="sc-hMqMXs iiejKk"
                disabled={false}
                id="toggle"
                name="toggle"
                onBlur={[Function]}
                onChange={[Function]}
                onFocus={[Function]}
                type="checkbox"
                value="toggle"
              />
            </div>
          </div>
          <div
            className="sc-bwzfXH MPGV"
          >
            <p
              className="sc-bxivhb jpexxn"
            >
               
              Toggle to indicate your preference!
            </p>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="sc-bwzfXH bWeyrt"
  >
    <div
      className="sc-bwzfXH looiFG"
    >
      <label>
        <p
          className="sc-bxivhb jpexxn"
        >
          Do you like checkboxes
        </p>
      </label>
    </div>
    <div
      className="sc-bwzfXH jWhOBo"
    >
      <div
        className="sc-jTzLTM hYTrgs"
        onClick={[Function]}
      >
        <div
          className="sc-bwzfXH cpsKmf"
        />
        <input
          checked={false}
          className="sc-VigVT jXADSx"
          id={undefined}
          name="foo"
          onBlur={[Function]}
          onFocus={[Function]}
          readOnly={true}
          type="checkbox"
          value="bar"
        />
      </div>
    </div>
  </div>
</form>
`;
